[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.5.20",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langsmith>=0.8.9",
    "numpy>=2.4.6",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers==5.5.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "streamlit-mic-recorder>=0.0.8",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers<5",
]
